[package]
name = "tile_engine"
version = "1.5.1"
edition = "2024"

[dependencies]
macroquad = "=0.4.14"
futures = "0.3.30"
derive_more = {version = "2.0.1", features = ["add", "mul", "not"]}
assrt = {git = "https://github.com/CartesianDaemon/assrt.git", branch = "v0.2"}
culpa = "1.0.2"
log = "0.4.28"
env_logger = "0.11.8"
